--- a/page1.html
+++ b/page1.html
@@ -139,20 +139,20 @@
         plotData(this.value);
       });
 
-      // Create legend
-      var legend = svg.selectAll(".legend")
-        .data(color.domain())
+    // Create legend
+    var legend = svg.selectAll(".legend")
+        .data(["Democratic", "Republican"]) // Hard-coding the legend entries
         .enter().append("g")
         .attr("class", "legend")
         .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
 
-      legend.append("rect")
+    legend.append("rect")
         .attr("x", width - 18)
         .attr("width", 18)
         .attr("height", 18)
         .style("fill", color);
 
-      legend.append("text")
+    legend.append("text")
         .attr("x", width - 24)
         .attr("y", 9)
         .attr("dy", ".35em")
