--- a/page1.html
+++ b/page1.html
@@ -41,26 +41,33 @@
         .append("g")
         .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-    var tooltip = d3.select("body").append("div")
+        // Tooltip
+        var tooltip = d3.select("body").append("div")
         .attr("class", "tooltip")
         .style("opacity", 0);
 
+    // Load both CSV files and wait until they are both loaded before proceeding
     Promise.all([
       d3.csv('State_Income_Clean.csv'),
       d3.csv('State_gov_party.csv')
     ]).then(function(values) {
       var incomeData = values[0];
       var partyData = values[1];
+      var tooltip = d3.select("body").append("div")
+        .attr("class", "tooltip")
+        .style("opacity", 0);
 
+      // Convert party data to a dictionary for easy lookup
       var partyLookup = {};
       partyData.forEach(function(d) {
-        partyLookup[d.State] = d.Party;
+        partyLookup[d.State] = d.Party.trim(); 
       });
 
+      // Parse and prepare the income data
       incomeData.forEach(d => {
         d['2021 Median income'] = +d['2021 Median income'].replace(/,/g, '');
         d['YoY Growth'] = +d['YoY Growth'].slice(0, -1);
-        d.Party = partyLookup[d.State];
+        d.Party = partyLookup[d.State];  // Add party data
       });
 
       var x = d3.scaleLinear()
@@ -71,6 +78,7 @@
           .domain([35000, d3.max(incomeData, d => d['2021 Median income'])])
           .range([height, 0]);
 
+      // Color scale
       var color = d3.scaleOrdinal()
           .domain(["Democratic", "Republican"])
           .range(["blue", "red"]);
@@ -83,12 +91,14 @@
           .attr("transform", "translate(0," + y(35000) + ")")
           .call(d3.axisBottom(x));
 
+      // Add X axis label
       svg.append("text")
           .attr("text-anchor", "end")
           .attr("x", width)
           .attr("y", height + margin.top + 20)
           .text("Year-Over-Year Growth (Percentage)");
 
+      // Add Y axis label
       svg.append("text")
           .attr("text-anchor", "end")
           .attr("transform", "rotate(-90)")
@@ -96,30 +106,34 @@
           .attr("x", -margin.top)
           .text("Median Income (USD)")
 
+      // Function to plot data
       function plotData(filterParty) {
+        // First, remove the existing circles
         svg.selectAll("circle").remove();
 
         var filteredData = incomeData;
 
         if (filterParty !== "all") {
-          filteredData = incomeData.filter(d => d.Party.trim() === filterParty);
+          filteredData = incomeData.filter(d => d.Party === filterParty);
         }
 
+        //plot data
         svg.selectAll("dot")
-          .data(filteredData)
-          .enter().append("circle")
-          .attr("cx", function(d) { return x(d['YoY Growth']); })
-          .attr("cy", function(d) { return y(d['2021 Median income']); })
-          .attr("r", 5)
-          .style("fill", function(d) { return color(d.Party); })
-          .style("stroke", function(d) { 
-              var highlightStates = ["Idaho", "Montana", "Oklahoma", "Vermont", "Tennessee", "Maine", "Louisiana"];
-              return highlightStates.includes(d.State) ? "lime" : "none"; 
-          })
-          .style("stroke-width", function(d) {
-              var highlightStates = ["Idaho", "Montana", "Oklahoma", "Vermont", "Tennessee", "Maine", "Louisiana"];
-              return highlightStates.includes(d.State) ? 2 : 0; 
-          })
+  .data(filteredData) // Change this line
+  .enter().append("circle")
+  .attr("cx", function(d) { return x(d['YoY Growth']); })
+  .attr("cy", function(d) { return y(d['2021 Median income']); })
+  .attr("r", 5)
+  .style("fill", function(d) { return color(d.Party); })
+  .style("stroke", function(d) { 
+      // Add stroke for selected states
+      var highlightStates = ["Idaho", "Montana", "Oklahoma", "Vermont", "Tennessee", "Maine", "Louisiana"];
+      return highlightStates.includes(d.State) ? "lime" : "none"; 
+  })
+  .style("stroke-width", function(d) {
+      var highlightStates = ["Idaho", "Montana", "Oklahoma", "Vermont", "Tennessee", "Maine", "Louisiana"];
+      return highlightStates.includes(d.State) ? 2 : 0; 
+  })
           .on("mouseover", function(event, d) {
                 tooltip.style("visibility", "visible")
                     .html(`State: ${d.State}<br>2021 Median Income: ${d['2021 Median income']}<br>YoY Growth: ${d['YoY Growth']}`);
@@ -133,12 +147,46 @@
            });
       }
 
+      // Initially plot all data
       plotData("all");
 
+      // React to changes in the dropdown menu
       d3.select("#partyFilter").on("change", function() {
-        plotData(this.value);
+        plotData(this.value.trim()); 
       });
 
+            // Create a div for the tooltip
+            var tooltip = d3.select("body")
+                .append("div")
+                .style("position", "absolute")
+                .style("z-index", "10")
+                .style("visibility", "hidden")
+                .style("background", "#ffffff")
+                .style("border", "solid")
+                .style("border-width", "1px")
+                .style("border-radius", "5px")
+                .style("padding", "10px");
+
+                var color = d3.scaleOrdinal()
+    .domain(["Democratic", "Republican"])  // Set domain explicitly
+    .range(["blue", "red"]);
+
+    // Draw legend colored rectangles
+    legend.append("rect")
+        .attr("x", width - 18)
+        .attr("width", 18)
+        .attr("height", 18)
+        .style("fill", color);
+
+    // Draw legend text
+    legend.append("text")
+        .attr("x", width - 24)
+        .attr("y", 9)
+        .attr("dy", ".35em")
+        .style("text-anchor", "end")
+        .text(function(d) { return d;});
+
+    
     // Create legend
     var legend = svg.selectAll(".legend")
         .data(["Democratic", "Republican"]) // Hard-coding the legend entries
@@ -158,6 +206,7 @@
         .attr("dy", ".35em")
         .style("text-anchor", "end")
         .text(function(d) { return d; });
+
     });
   </script>
   <button class="button" onclick="location.href='index.html'">Previous</button>
