--- a/page1.html
+++ b/page1.html
@@ -8,6 +8,12 @@
       top: 20px;
       right: 20px;
     }
+
+    #button-container {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+    }
   </style>
   
 </head>
