--- a/page1.html
+++ b/page1.html
@@ -198,8 +198,10 @@
 
     });
   </script>
-  <button class="button" onclick="location.href='index.html'">Previous</button>
-  <button class="button" onclick="location.href='page2.html'">Next</button>
+  <div id="button-container">
+    <button class="button" onclick="location.href='index.html'">Previous</button>
+    <button class="button" onclick="location.href='page2.html'">Next</button>
+  </div>
 </body>
 </html>
 
