--- a/page1.html
+++ b/page1.html
@@ -40,6 +40,30 @@
     var width = 960 - margin.left - margin.right;
     var height = 500 - margin.top - margin.bottom;
 
+    var margin = {top: 20, right: 20, bottom: 60, left: 120};
+    var width = 960 - margin.left - margin.right;
+    var height = 500 - margin.top - margin.bottom;
+
+    var svg = d3.select("body")
+      .append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+      .append("g")
+      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+    // Tooltip
+    var tooltip = d3.select("body").append("div")
+    .attr("class", "tooltip")
+    .style("opacity", 0)
+    .style("position", "absolute")
+    .style("z-index", "10")
+    .style("background", "#ffffff")
+    .style("border", "solid")
+    .style("border-width", "1px")
+    .style("border-radius", "5px")
+    .style("padding", "10px")
+    .style("visibility", "hidden");
+
     var svg = d3.select("body")
         .append("svg")
         .attr("width", width + margin.left + margin.right)
