--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
             padding: 5px;
             border: 1px solid #d3d3d3;
         }
+
+    #button-container {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+    }
+  </style>
     </style>
 </head>
 <body>
@@ -113,5 +120,8 @@
                 .style("padding", "10px");
             });
         </script>
+  <div id="button-container">
+    <button class="button" onclick="location.href='page1.html'">Next</button>
+  </div>
 </body>
 </html>
